__________________________

Solarus 1.6.0 (in progress)
___________________________

Engine changes
--------------

* Treasure dialogs are now optional (#1076).
* Fix random movement giving the same path for all entities on Mac (#1083).
* Fix possible crash when reloading very old savegame files (#1064).
* Fix crash when a sprite PNG file is missing.
* Fix joypad deadzone issue (#672) by strycore.
* Fix compilation error with Clang 3.9 in SNES_SPC.
* Fix possible compilation error when HAVE_UNISTD_H has no value (#1084).
* Improve Lua error messages.

Lua API changes
---------------

Changes that introduce incompatibilities:

* 

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add methods entity:get_layer() and entity:set_layer().
* sprite:get_num_frames() can now optionally take an animation and direction.
* sprite:get_frame_delay() can now optionally take an animation.
* sprite:get_size() can now optionally take an animation and direction.
* sprite:get_origin() can now optionally take an animation and direction.

Data files format changes
-------------------------

* Make the tileset entities image optional (#884).

___________________________

Solarus 1.5.3 (2016-04-01)
__________________________

* Speed up loading maps by keeping tilesets in a cache (#1019).
* Fix text_surface:set_horizontal/vertical_alignment() not working.
* Fix parallax dynamic tiles still displayed when disabled or invisible.
* Improve error message of non-square tile patterns with diagonal obstacles.

__________________________

Solarus 1.5.1 (2016-11-29)
__________________________

Engine changes
--------------

* Add Spanish translation of the launcher GUI (thanks Diarandor!).
* Fix registering quest to the launcher at quest install time (#948).
* Fix crash when a carried bomb explodes (#953).
* Fix crash when a scrolling teletransporter is incorrectly placed (#977).